--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="0.1; url=https://space.bilibili.com/429908251/">
   <title>Document</title>
 </head>
 
 <body>
-  <h1>你</h1>
-  <div>这里是一个html</div>
+  <h1>嗨~欢迎来到泽友io的空间</h1>
+  <div>(挥手手~~)</div>
 </body>
 
 </html>
