--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="refresh" content="0.1; url=https://space.bilibili.com/429908251/">
-  <title>Document</title>
+  <title>泽友io的空间~</title>
 </head>
 
 <body>
