--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="refresh" content="1; url=https://space.bilibili.com/429908251/">
+  <meta http-equiv="refresh" content="5; url=https://space.bilibili.com/429908251/">
   <title>泽友io的空间~</title>
 </head>
 
 <body>
   <h1>嗨~欢迎来到泽友io的空间</h1>
-  <div>(挥手手~~)</div>
+  <div>（挥手手~~）</div>
+  <div>（5秒之后我们再相见啦！）</div>
+  <div>————————————————————</div>
+  <div>泽友的女装福利什么时候更新呢？（沉思）</div>
 </body>
 
 </html>
